Stop stripping whitespace from image map name. b=87050 r=kmcclusk sr=attinasi (checked in for David Einstein)